ajout des vainqueyrs en gras. rechargement du live fixé à 10 minutes quand pas de live
git-svn-id: https://svn.code.sf.net/p/provolley/code@9 7941e115-920d-4f1e-bb98-6c77b12abb24

--- a/provolley-fr/trunk/android/res/values/strings.xml
+++ b/provolley-fr/trunk/android/res/values/strings.xml
@@ -30,7 +30,9 @@
          <string name="application_histo_v1_2_0"><![CDATA[
              <b>v1.2.0</b> Nouvelles fonctionnalités :<br/>
              <ul>
-             <li>Ajout d\'un ascenseur dans les écrans d\'aide et de license</li>
+             <li>Ajout d\'un ascenseur dans les écrans d\'aide et de licence</li>
+             <li>Vainqueur en gras sur les écrans de résultats et du live</li>
+             <li>Rechargement de l\'écran du live toutes les 10 minutes quand pas de match en cours</li>
              </ul>
              <br/><br/>
              ]]></string>
