--- a/provolley-fr/trunk/android/res/values/strings.xml
+++ b/provolley-fr/trunk/android/res/values/strings.xml
@@ -33,7 +33,7 @@
              <li>Ajout d\'un ascenseur dans les écrans d\'aide et de licence</li>
              <li>Vainqueur en gras sur les écrans de résultats et du live</li>
              <li>Rechargement de l\'écran du live toutes les 10 minutes quand pas de match en cours</li>
-             <li>Affichage des équipes championnes, reléguées et qualifiées pour les play-offs</li>
+             <li>Sur les écrans de classement, affichage des pénalités DNACG, des équipes championnes, reléguées et qualifiées pour les play-offs</li>
              </ul>
              <br/><br/>
              ]]></string>
