--- a/provolley-fr/trunk/android/res/values/strings.xml
+++ b/provolley-fr/trunk/android/res/values/strings.xml
@@ -1,14 +1,14 @@
 <resources>
 
         <string name="application_name">ProVolley-fr</string>
-        <string name="application_version">version 1.3.0</string>
+        <string name="application_version">version 1.4.0</string>
         
         <string name="application_version_1_0_0">version 1.0.0</string>
         <string name="application_version_1_0_1">version 1.0.1</string>
         <string name="application_version_1_1_0">version 1.1.0</string>
         <string name="application_version_1_2_0">version 1.2.0</string>
         <string name="application_version_1_3_0">version 1.3.0</string>
-        <string name="application_version_1_3_1">version 1.3.1</string>
+        <string name="application_version_1_4_0">version 1.4.0</string>
         
         <string name="application_website">www.provolley.fr</string>
         <string name="application_copyright">Copyright 2013-2014 Christophe Bothamy</string>
@@ -29,11 +29,12 @@
          <string name="application_historique"><![CDATA[<h4>Historique des versions</h4>]]></string>
          <string name="application_maj"><![CDATA[<h4>Mises à jour depuis la dernière version</h4>]]></string>
          
-         <string name="application_histo_v1_3_1"><![CDATA[
-             <b>v1.3.1</b> Corrections :<br/>
+         <string name="application_histo_v1_4_0"><![CDATA[
+             <b>v1.4.0</b> Nouvelles fonctionnalités :<br/>
              <ul>
              <li>Mise a jour des libellés des promotions pour la saison 2013/2014</li>
              <li>Correction du non-rafraichissement du live lors du retour sur l\'appli</li>
+             <li>Affichage des ratios de sets et points dans l\'écran de classement en mode paysage</li>
              </ul>
              <br/><br/>
              ]]></string>
